fixtures/most.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: hello
  namespace: laurent
spec:
  routes:
  - hashPolicy: []
    match: "/"
    perFilterConfig:
      envoy.filters.http.header_size:
        header_size:
          max_bytes: 8192
      envoy.filters.http.ip_allow_deny:
        allow_cidrs:
        - address_prefix: 192.150.10.200
          prefix_len: 32
    requestHeadersPolicy:
      set:
      - name: x-forwarded-tls-version
        value: __percent__DOWNSTREAM_TLS_VERSION__percent__
      - name: x-forwarded-tls-cipher
        value: __percent__DOWNSTREAM_TLS_CIPHER__percent__
    responseHeadersPolicy:
      set:
      - name: x-envoy-upstream-remote-address
        value: __percent__UPSTREAM_REMOTE_ADDRESS__percent__
    retryPolicy:
      count: 3
      perTryTimeout: 150ms
    services:
    - healthCheck:
        healthyThresholdCount: 4
        intervalSeconds: 5
        path: "/health"
        timeoutSeconds: 2
        unhealthyThresholdCount: 3
      name: hello
      port: 3000
    timeoutPolicy:
      request: infinity
  - headerMatch:
    - contains: foo=bar
      name: :path
    match: "/"
    prefixRewrite: "/ping"
    services:
    - name: hello
      port: 3000
  - headerMatch:
    - exact: GET
      name: :method
    match: "/node/"
    prefixRewrite: "/"
    services:
    - healthCheck:
        healthyThresholdCount: 4
        intervalSeconds: 5
        path: "/health"
        timeoutSeconds: 2
        unhealthyThresholdCount: 3
      name: hello
      port: 3001
  - match: "/http2/"
    permitInsecure: true
    prefixRewrite: "/"
    services:
    - name: hello2
      port: 3002
  - match: "/http2/tls/"
    prefixRewrite: "/"
    services:
    - name: hello2
      port: 3003
  virtualhost:
    fqdn: laurent.ethos51-dev-va6.ethos.adobe.net
    tls:
      secretName: heptio-contour/cluster-ssl-public
status:
  currentStatus: valid
  description: valid IngressRoute
